@@ -258,10 +258,6 @@ struct window
        must run the redisplay-end-trigger-hook.  */
     Lisp_Object redisplay_end_trigger;
 
-    /* Non-nil means deleting or resizing this window distributes
-       space among all windows in the same combination.  */
-    Lisp_Object splits;
-
     /* Non-nil means this window's child windows are never
        (re-)combined.  */
     Lisp_Object nest;
